[package]
name = "NarraRust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
js-sandbox = "0.1.6"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crossterm = "0.26.1"
regex = "1.8.4"
rhai = "1.15.1"
serde = "1.0.164"
serde_json = "1.0.99"
terminal-menu = "2.0.6"
